// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ToolTip ToolTip Icon hover opens ToolTip 1`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target bp3-popover-open"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline"
        style="display: inline-flex; align-items: center;"
        tabindex="0"
      >
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Test ToolTip ToolTip Icon renders succesfully 1`] = `
<div>
  <span
    class="bp3-popover-wrapper"
  >
    <span
      class="bp3-popover-target"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline"
        style="display: inline-flex; align-items: center;"
        tabindex="0"
      >
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </span>
  </span>
</div>
`;
